--- a/src/counter/Counter.css
+++ b/src/counter/Counter.css
@@ -52,6 +52,7 @@ header {
   height: 200px;
   min-width: 200px;
   width: 50%;
+  /* background: #0400f2; */
   padding: auto 0;
   align-items: center;
   justify-content: center;
