--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,15 @@
-.App-header {
+.App {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  /* align-items: center; */
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   background: #f9f9f9;
-  background: #f9f9f9;
+}
+main {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
