--- a/src/Todo-list/todo.css
+++ b/src/Todo-list/todo.css
@@ -1,11 +1,24 @@
 .todo {
-  background: #c84e4e;
+  display: flex;
+  flex-direction: column;
+  background: #56b4f0;
   padding: 10px;
+  gap: 20px;
   box-shadow: 30px 54px 67px rgba(209, 217, 230, 0.67), 30px 24px 34px rgba(209, 217, 230, 0.34), 30px 28px 38px rgba(209, 217, 230, 0.4), 30px 35px 45px rgba(209, 217, 230, 0.48), -20px -63px 65px rgba(255, 255, 255, 0.75), -20px -36.8341px 42.6719px rgba(255, 255, 255, 0.539141), -20px -31.3638px 35.026px rgba(255, 255, 255, 0.44708), -20px -28.4185px 30.1667px rgba(255, 255, 255, 0.375);
   border-radius: 10px;
 }
+.todo__addItem input {
+  color: black;
+  background: #437ea3;
+  border-radius: 10px;
+  padding: 10px 5px;
+  margin: 5px 0;
+}
+.todo__addItem input::-webkit-input-placeholder {
+  color: var(--bs-gray-dark);
+}
 .listItem__container {
-  background: #d95555;
+  background: #437ea3;
   border-radius: 10px;
   display: flex;
   align-items: center;
