--- a/src/Todo-list/todo.scss
+++ b/src/Todo-list/todo.scss
@@ -1,6 +1,9 @@
 .todo {
-  background: #c84e4e;
+  display: flex;
+  flex-direction: column;
+  background: #56b4f0;
   padding: 10px;
+  gap: 20px;
   box-shadow: 30px 54px 67px rgba(209, 217, 230, 0.67),
     30px 24px 34px rgba(209, 217, 230, 0.34),
     30px 28px 38px rgba(209, 217, 230, 0.4),
@@ -10,7 +13,15 @@
     -20px -31.3638px 35.026px rgba(255, 255, 255, 0.44708),
     -20px -28.4185px 30.1667px rgba(255, 255, 255, 0.375);
   border-radius: 10px;
-  &__addItem {
+  &__addItem input {
+    color: black;
+    background: #437ea3;
+    border-radius: 10px;
+    padding: 10px 5px;
+    margin: 5px 0;
+  }
+  &__addItem input::-webkit-input-placeholder {
+    color: var(--bs-gray-dark);
   }
 
   &__listItem {
@@ -18,7 +29,7 @@
 }
 .listItem {
   &__container {
-    background: #d95555;
+    background: #437ea3;
 
     border-radius: 10px;
     display: flex;
