--- a/src/counter/Counter.css
+++ b/src/counter/Counter.css
@@ -20,12 +20,13 @@ header {
 }
 .minus,
 .plus {
+  aspect-ratio: 1 / 1;
   display: flex;
   text-transform: uppercase;
-  width: 120px;
-  height: 120px;
+  width: 140px;
+
   border-radius: 50%;
-  background: #f7f7f7;
+  background: #ededed;
   box-shadow: -10px -10px 30px #ffffff, 10px 10px 30px rgba(174, 174, 192, 0.4);
   justify-content: center;
   align-items: center;
