--- a/src/Todo-list/todo.scss
+++ b/src/Todo-list/todo.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   background: #56b4f0;
+  min-width: 320px;
   padding: 10px;
   gap: 20px;
   box-shadow: 30px 54px 67px rgba(209, 217, 230, 0.67),
@@ -40,12 +41,13 @@
   }
 
   &__item {
+    word-break: break-all;
     margin: 0;
   }
-}
-.item {
   &__count {
+    min-width: 30%;
     display: flex;
     align-items: center;
+    justify-content: space-between;
   }
 }
