--- a/src/calculator/Calculator.css
+++ b/src/calculator/Calculator.css
@@ -2,14 +2,21 @@
   display: flex;
   flex-direction: column;
 }
+
 .display {
   text-align: right;
 }
 .history {
+  margin-bottom: 30px;
 }
 .output {
+  background: #7373736d;
+  padding: 5px;
+  border-radius: 5px;
 }
 .numPad {
+  gap: 10px;
+  margin-top: 10px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr 1fr 1fr;
@@ -17,6 +24,4 @@
 .numPad2 {
   display: grid;
   grid-template-columns: 2fr 1fr 1fr;
-}
-button {
 }
